--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body::before {
+    content: '';
+    display: block;
+    height: 60px;
+}
 @media(min-width: 768px) {
     .news-input {
         width: 50%;
