--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,14 @@ body::before {
     display: block;
     height: 60px;
 }
+
+#map > iframe{
+    height: 100%;
+    width: 100%;
+    border-radius: 1rem;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+
+}
 @media(min-width: 768px) {
     .news-input {
         width: 50%;
